@@ -1,4 +1,4 @@
-# $Id: sample-ngircd.conf,v 1.31 2005/03/02 16:07:30 alex Exp $
+# $Id: sample-ngircd.conf,v 1.32 2005/03/15 16:56:16 alex Exp $
 
 #
 # This is a sample configuration file for the ngIRCd, which must be adepted
@@ -89,6 +89,10 @@
 	# they are not(!) channel-operators?
 	;OperCanUseMode = no
 
+	# Mask IRC Operator mode requests as if they were coming from the server?
+	# (This is a compatibility hack for ircd-irc2 servers )
+	;OperServerMode = no
+	
 	# Maximum number of simultaneous connection the server is allowed
 	# to accept (<=0: unlimited):
 	;MaxConnections = -1
